[project]
name = "greedy-bnb-usdt"
version = "0.1.0"
description = ""
authors = [
    {name = "WangWilly",email = "angles.anodes.0v@icloud.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "ccxt (>=4.4.86,<5.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "psutil (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

